Fix: Set hero vh to 94, stopped nav scrolling out of view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
 /*--------------------------------------------Hero Image.css*/
 
 .hero {
-    height: 100vh;
+    height: 94vh;
     background: url("../images/wahero.jpg") no-repeat center center fixed;
     background-size: cover;
     -webkit-background-size: cover;
